--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "venv/bin/python3"
+    "python.pythonPath": "/Users/apple/Desktop/dev/btre_project/venv/bin/python3.8"
 }
